--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "sohne-var", "Helvetica Neue", "Arial", sans-serif;
+  font-family: "Inter", sans-serif;
   color: #2f3f4e;
 }
 p {font-size: larger; line-height: 30px;}
@@ -18,7 +18,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "sohne-var", "Helvetica Neue", "Arial", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .about .about-intro h6 {
@@ -92,7 +92,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
   -moz-text-align-last: center;
   text-align-last: center;
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 #header .profile h1 a, #header .profile h1 a:hover {
   color: #fff;
@@ -237,7 +237,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   margin-bottom: 50px;
   font-size: 26px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 #hero p span {
   color: #fff;
@@ -357,7 +357,7 @@ section {
 .facts .count-box p {
   padding: 15px 0 0 0;
   margin: 0 0 0 60px;
-  font-family: "Raleway", sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 14px;
   color: #122f57;
 }
@@ -367,7 +367,7 @@ section {
   margin-top: 20px;
   color: #122f57;
   font-size: 15px;
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter", sans-serif;
   transition: ease-in-out 0.3s;
 }
 .facts .count-box a:hover {
@@ -390,7 +390,7 @@ section {
   display: block;
   font-size: 18px;
   font-weight: 600;
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter", sans-serif;
   color: #050d18;
 }
 .skills .progress .skill .val {
@@ -429,7 +429,7 @@ section {
   font-size: 18px;
   font-weight: 600;
   text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter", sans-serif;
   color: #050d18;
   margin-bottom: 10px;
 }
